--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -1,32 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.roc.sndchk.sndchkapp">
-
-    <uses-feature
-        android:name="android.hardware.Camera"
-        android:required="true"
-        android:targetSdkVersion="14"
-        />
+          package="com.soundchkapp.soundchk">
 
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="SounD CHK"
+        android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light">
+        android:theme="@style/AppTheme">
 
-
-        <activity android:name=".BottomBar">
+        <activity android:name=".MainActivityBottomBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <activity android:name=".CameraActivity"></activity>
-        <activity android:name=".HomePageActivity"></activity>
-
+        <activity android:name=".CameraActivity"/>
     </application>
 
 </manifest>
